_/data/documentations/numpy/numpy/typing/tests/data/fail/lib_function_base_pyi.comment
['text':' E: incompatible type','line_number':14,'multiline':False]['text':' E: incompatible type','line_number':15,'multiline':False]['text':' E: incompatible type','line_number':16,'multiline':False]['text':' E: incompatible type','line_number':17,'multiline':False]['text':' E: incompatible type','line_number':18,'multiline':False]['text':' E: incompatible type','line_number':19,'multiline':False]['text':' E: incompatible type','line_number':20,'multiline':False]['text':' E: incompatible type','line_number':21,'multiline':False]['text':' E: incompatible type','line_number':22,'multiline':False]['text':' E: incompatible type','line_number':24,'multiline':False]['text':' E: incompatible type','line_number':25,'multiline':False]['text':' E: No overload variant','line_number':26,'multiline':False]['text':' E: incompatible type','line_number':27,'multiline':False]['text':' E: incompatible type','line_number':29,'multiline':False]['text':' E: incompatible type','line_number':30,'multiline':False]['text':' E: incompatible type','line_number':31,'multiline':False]['text':' E: incompatible type','line_number':32,'multiline':False]['text':' E: No overload variant','line_number':33,'multiline':False]['text':' E: No overload variant','line_number':34,'multiline':False]['text':' E: incompatible type','line_number':35,'multiline':False]['text':' E: incompatible type','line_number':36,'multiline':False]['text':' E: incompatible type','line_number':37,'multiline':False]['text':' E: incompatible type','line_number':38,'multiline':False]['text':' E: incompatible type','line_number':39,'multiline':False]['text':' E: incompatible type','line_number':40,'multiline':False]['text':' E: incompatible type','line_number':41,'multiline':False]['text':' E: incompatible type','line_number':42,'multiline':False]['text':' E: No overload variant','line_number':44,'multiline':False]['text':' E: No overload variant','line_number':45,'multiline':False]['text':' E: No overload variant','line_number':46,'multiline':False]['text':' E: No overload variant','line_number':47,'multiline':False]['text':' E: incompatible type','line_number':48,'multiline':False]['text':' E: incompatible type','line_number':49,'multiline':False]['text':' E: incompatible type','line_number':50,'multiline':False]['text':' E: No overload variant','line_number':51,'multiline':False]